bring em.tex online, with partial support from physics.sty

--- a/common/com_channel.tex
+++ b/common/com_channel.tex
@@ -336,6 +336,72 @@ Then there exists some $\opR'$ such that
 \end{proof}
 
 %======================================
+\section{Alternative system partitioning}
+%======================================
+\begin{figure}[ht] \color{figcolor}
+\begin{center}
+\begin{fsK}
+\setlength{\unitlength}{0.18mm}
+\begin{picture}(600,400)(-300,-100)
+  \thinlines
+  %\graphpaper[10](0,0)(700,100)
+
+  \put(-300, 210 ){\makebox (  50, 50)[b]{$\su$}        }
+  \put(-300, 200 ){\vector  (   1,  0)   {100}          }
+  \put(-200, 150 ){\framebox( 100,100)   {coding}       }
+  \put(-150, 150 ){\vector  (   0, -1)   {100}          }
+  \put(-200,- 50 ){\framebox( 100,100)   {modulator}    }
+  \put(-100,   0 ){\vector  (   1,  0)   { 50}          }
+  \put(- 50,- 50 ){\framebox( 100,100)   {channel}      }
+  \put(  50,   0 ){\vector  (   1,  0)   { 50}          }
+  \put( 100,- 50 ){\framebox( 100,100)   {demodulator}  }
+  \put( 150,  50 ){\vector  (   0,  1)   {100}          }
+  \put( 100, 150 ){\framebox( 100,100)   {decoding}     }
+  \put( 250, 210 ){\makebox (  50, 50)[b]{$\sue$}        }
+  \put( 200, 200 ){\vector  (   1,  0)   {100}          }
+
+  \put(-250, 110 ){\dashbox ( 500,180)[tr]{outer transceiver}}
+  \put(-250,- 90 ){\dashbox ( 500,180)[br]{inner transceiver}}
+\end{picture}
+\end{fsK}
+\end{center}
+\caption{
+   Inner/outer transceiver
+   \label{fig:inner_outer}
+   }
+\end{figure}
+
+A communication system can be partitioned into two parts
+(see \prefpp{fig:inner_outer}):\footnote{\citerp{meyr}{2}}
+
+\begin{tabular}{lll}
+   1.& outer transceiver: & data encoding/decoding \\
+   2.& inner transceiver: & modulation/demodulation.
+\end{tabular}
+
+The outer transceiver can perform several types of coding
+on the data sequence to be transmitted:
+\\
+\begin{tabular}{llp{10cm}}
+   1.& source coding: &
+       compress data sequence size
+       (lower limit is Shannon Entropy $H$)
+\\
+   2.& channel coding: &
+       modify data sequence such that errors induced by the channel can be
+       detected and corrected
+       (all errors can be theoretically corrected if the data
+        rate is at or below the Shannon channel capacity $C$).
+\\
+   3.& modulation coding: &
+       make sequence ``more suitable" for transmission through channel
+\\
+   4.& encryption: &
+       increase the difficulty which an eavesdropper would need
+       to be able to know the data sequence.
+\end{tabular}
+
+%======================================
 \section{Channel Statistics}
 %======================================
 The receiver needs to make a decision as to what
