--- a/common/sty/physics.sty
+++ b/common/sty/physics.sty
@@ -6,127 +6,127 @@
 %--------------------------------------
 % Compile control
 %--------------------------------------
-\ProvidesPackage{dcsd}
-
+\ProvidesPackage{physics}
 
 %--------------------------------------
 % Electromagnetics
 %--------------------------------------
-\renewcommand{\H}        [0]{\ensuremath{\mathbf{H}}}
-\newcommand  {\D}        [0]{\ensuremath{\mathbf{D}}}
-%\newcommand  {\B}        [0]{\ensuremath{\mathbf{B}}}
-\newcommand  {\J}        [0]{\ensuremath{\mathbf{J}}}
-\newcommand  {\diver}    [1]{\ensuremath{\mathbf{\nabla\cdot#1}}}
-\newcommand  {\curl}     [1]{\ensuremath{\mathbf{\nabla\times#1}}}
-\newcommand  {\DE}       [0]{\ensuremath{\mathcal{E}}}
-\newcommand  {\BH}       [0]{\ensuremath{\mathcal{U}}}
-\newcommand  {\laplacian}[1]{\ensuremath{\nabla^2 #1}}
-\newcommand  {\unit}     [1]{\ensuremath{\hat{\mathbf{#1}} }}
+ \renewcommand{\H}        [0]{{\mathbf{H}}}
+ \newcommand  {\D}        [0]{{\mathbf{D}}}   
+ \newcommand  {\emB}        [0]{{\mathbf{B}}} % magnetic flux density
+ \newcommand  {\J}        [0]{{\mathbf{J}}}
+% \newcommand  {\diver}    [1]{{\mathbf{\nabla\cdot#1}}}
+% \newcommand  {\diver}    [1]{{{\nabla\cdot#1}}}
+ \newcommand  {\diver}    [0]{{\nabla\cdot}}
+% \newcommand  {\curl}     [1]{{\mathbf{\nabla\times#1}}}
+% \newcommand  {\curl}     [1]{{{\nabla\times#1}}}
+ \newcommand  {\curl}     [0]{{\nabla\times}}
+ \newcommand  {\DE}       [0]{{\mathcal{E}}}
+ \newcommand  {\emBH}       [0]{{\mathcal{U}}}  % permeability operator
+% \newcommand  {\laplacian}[1]{{\nabla^2 #1}}
+ \newcommand  {\laplacian}[0]{{{\nabla}^{2}}}
+ \newcommand  {\unit}     [1]{{\hat{\mathbf{#1}} }}
 
 %--------------------------------------
 % Vector space
 %--------------------------------------
-\newcommand{\mCmm}[0]{\ensuremath{\C^{m\times m}}}
-\newcommand{\mCnn}[0]{\ensuremath{\C^{n\times n}}}
-\newcommand{\mCnm}[0]{\ensuremath{\C^{m\times n}}}
-\newcommand{\mCmn}[0]{\ensuremath{\C^{m\times n}}}
+%20190903%\newcommand{\mCmm}[0]{{\C^{m\times m}}}
+%20190903%\newcommand{\mCnn}[0]{{\C^{n\times n}}}
+%20190903%\newcommand{\mCnm}[0]{{\C^{m\times n}}}
+%20190903%\newcommand{\mCmn}[0]{{\C^{m\times n}}}
 
 %--------------------------------------
 % Multipath
 %--------------------------------------
-\newcommand{\Rtt} [0] {\mathrm{R}_\mathrm{hh}}        % time correlation
-\newcommand{\Rtf} [0] {\mathrm{R}_\mathrm{hh}^\lhd}   % scattering function
-\newcommand{\Rft} [0] {\mathrm{R}_\mathrm{hh}^\rhd}   % spaced-time spaced-frequency function
-\newcommand{\Rff} [0] {\mathrm{R}_\mathrm{hh}^{\Join}}% doppler function
-
-
+%\newcommand{\Rtt} [0] {\mathrm{R}_\mathrm{hh}}        % time correlation
+%\newcommand{\Rtf} [0] {\mathrm{R}_\mathrm{hh}^\lhd}   % scattering function
+%\newcommand{\Rft} [0] {\mathrm{R}_\mathrm{hh}^\rhd}   % spaced-time spaced-frequency function
+%\newcommand{\Rff} [0] {\mathrm{R}_\mathrm{hh}^{\Join}}% doppler function
 
 %--------------------------------------
 % System parameters
 %--------------------------------------
-\newcommand{\Rrate}[1]{\ensuremath{R_\mathsf{#1}}}  
-\newcommand{\Rratio}[1]{\ensuremath{\bar{R}_\mathsf{#1}}}
+\newcommand{\Rrate}[1]{{R_\mathsf{#1}}}  
+\newcommand{\Rratio}[1]{{\bar{R}_\mathsf{#1}}}
   
 \newcommand{\Rsym}[0]{\Rrate{sig}}   % symbol rate    : symbols/second
 \newcommand{\Rsam}[0]{\Rrate{smp}}   % sampling rate  : samples/second
 \newcommand{\Rdata}[0]{\Rrate{data}} % data rate      : data bits/second
 
-\newcommand{\rcode}[0]{\Rratio{code}}% coding ratio   : information bits/code bits
-\newcommand{\rsym}[0]{\Rratio{sym}}  % symbol ratio   : 1/# signal waveforms
-\newcommand{\rchan}[0]{\Rratio{chan}}  % channel ratio   : information bits/symbol
-
+%20190903%\newcommand{\rcode}[0]{\Rratio{code}}% coding ratio   : information bits/code bits
+%20190903%\newcommand{\rsym}[0]{\Rratio{sym}}  % symbol ratio   : 1/# signal waveforms
+%20190903%\newcommand{\rchan}[0]{\Rratio{chan}}  % channel ratio   : information bits/symbol
 
 %--------------------------------------
 % Filters
 %--------------------------------------
-\newcommand{\hh}[1][x]{\ensuremath{\mathrm{h}_\mathsf{#1}}}
-\newcommand{\hht}[0]{\hh[t]}
-\newcommand{\hhc}[0]{\hh[c]}
-\newcommand{\hhr}[0]{\hh[r]}
-%\newcommand{\hhcmp}[0]{\ensuremath{\mathrm{h}}}
-%\newcommand{\hhcmpf}[0]{\ft{\hhcmp}}  % composite
+%20190903%\newcommand{\hh}[1][x]{{\mathrm{h}_\mathsf{#1}}}
+%20190903%\newcommand{\hht}[0]{\hh[t]}
+%20190903%\newcommand{\hhc}[0]{\hh[c]}
+%20190903%\newcommand{\hhr}[0]{\hh[r]}
+%20190903%%\newcommand{\hhcmp}[0]{{\mathrm{h}}}
+%20190903%%\newcommand{\hhcmpf}[0]{\ft{\hhcmp}}  % composite
 
 %--------------------------------------
 % Functions and vectors
 %--------------------------------------
- \newcommand{\distsq}[2]{\metricn^2\brp{#1,\,#2}}
- \newcommand{\FS}  [1]   {\ensuremath{\breve{\mathrm{#1}}}}
- \newcommand{\delt}[1][t]{{\ensuremath{{\Delta{#1}}}}}
- \newcommand{\delf}[0]   {\delt[f]}
- \newcommand{\ue} {\hat{u}}    %
- \newcommand{\su}   [1][n] {\seq{u}{#1}}    % 
- \newcommand{\sy}   [1][n] {\seq{y}{#1}}    % 
- \newcommand{\sa}   [1][n] {\seq{a}{#1}}    % 
- \newcommand{\sue}  [1][n] {\seq{\hat{u}}{#1}}    % 
- \newcommand{\sae}  [1][n] {\seq{\hat{a}}{#1}}    % 
- \newcommand{\fdot}[1]   {\ensuremath{\mathrm{\dot{#1}}}}
- \newcommand{\fdotr}[0]{\fdot{r}}
- \newcommand{\fdots}[0]{\fdot{s}}
- \newcommand{\fdotn}[0]{\fdot{n}}
- \newcommand{\fdotlam}[0]{\fdot{\lambda}}
- \newcommand{\fn  }[0]{\fnct{n}}
-% \newcommand{\fz  }[0]{\fnct{z}}
- \newcommand{\Lg  }[0]{\LT{g}}
- \newcommand{\step}[0]{\ensuremath{\mu}}
+%20190903% \newcommand{\distsq}[2]{\metricn^2\brp{#1,\,#2}}
+%20190903% \newcommand{\FS}  [1]   {{\breve{\mathrm{#1}}}}
+%20190903% \newcommand{\delt}[1][t]{{{{\Delta{#1}}}}}
+%20190903% \newcommand{\delf}[0]   {\delt[f]}
+%20190903% \newcommand{\ue} {\hat{u}}    %
+%20190903% \newcommand{\su}   [1][n] {\seq{u}{#1}}    % 
+%20190903% \newcommand{\sy}   [1][n] {\seq{y}{#1}}    % 
+%20190903% \newcommand{\sa}   [1][n] {\seq{a}{#1}}    % 
+%20190903% \newcommand{\sue}  [1][n] {\seq{\hat{u}}{#1}}    % 
+%20190903% \newcommand{\sae}  [1][n] {\seq{\hat{a}}{#1}}    % 
+%20190903% \newcommand{\fdot}[1]   {{\mathrm{\dot{#1}}}}
+%20190903% \newcommand{\fdotr}[0]{\fdot{r}}
+%20190903% \newcommand{\fdots}[0]{\fdot{s}}
+%20190903% \newcommand{\fdotn}[0]{\fdot{n}}
+%20190903% \newcommand{\fdotlam}[0]{\fdot{\lambda}}
+%20190903% \newcommand{\fn  }[0]{\fnct{n}}
+%20190903%% \newcommand{\fz  }[0]{\fnct{z}}
+%20190903% \newcommand{\Lg  }[0]{\LT{g}}
+%20190903% \newcommand{\step}[0]{{\mu}}
 %        
 %--------------------------------------
 % Functionals
 %--------------------------------------
- \newcommand{\flE}  [0]{\opX [E]    }
- \newcommand{\flEb} [1]{\opXb{E}{#1}}
+%20190903% \newcommand{\flE}  [0]{\opX [E]    }
+%20190903% \newcommand{\flEb} [1]{\opXb{E}{#1}}
         
 %--------------------------------------
 % operators
 %--------------------------------------
- \newcommand{\opXXi}[1]{\opX[#1]^{-1}}
-        
- \newcommand{\opSmp}  [0]{\ensuremath{\amalg}   } % sampling
- \newcommand{\opSmpb} [1]{\ensuremath{\Xi\left[#1\right]}}
- \newcommand{\opSys}  [0]{\opX [S]    } % system
- \newcommand{\opSysb} [1]{\opXb{S}{#1}}
-%\newcommand{\opT}  [0]{\opX [T]    } % transmit
- \newcommand{\opTb} [1]{\opXb{T}{#1}}
-% \newcommand{\opTa} [0]{\opXa[T]    } % adjoint
-% \newcommand{\opC}  [0]{\opX [C]    } % channel
- \newcommand{\opCb} [1]{\opXb{C}{#1}}
- \newcommand{\opCan}[0]{\opX [C]_{\mathrm{an}}} % additive noise channel
- \newcommand{\opCagn}[0]{\opX [C]_{\mathrm{agn}}} % additive noise channel
- \newcommand{\opCawn}[0]{\opX [C]_{\mathrm{awn}}} % additive white noise channel
- \newcommand{\opCawgn}[0]{\opX [C]_{\mathrm{awgn}}} % additive white Gaussian noise channel
- \newcommand{\opCi} [0]{\opX [C]^{-1} } % inverse channel operator
- \newcommand{\opCTi} [0]{(\opC\opT)^{-1} } % inverse operator
-% \newcommand{\opR}  [0]{\opX [R]    } % receive
- \newcommand{\opRb} [1]{\opXb{R}{#1}}
+%20190903% \newcommand{\opXXi}[1]{\opX[#1]^{-1}}
+%20190903%        
+%20190903% \newcommand{\opSmp}  [0]{{\amalg}   } % sampling
+%20190903% \newcommand{\opSmpb} [1]{{\Xi\left[#1\right]}}
+%20190903% \newcommand{\opSys}  [0]{\opX [S]    } % system
+%20190903% \newcommand{\opSysb} [1]{\opXb{S}{#1}}
+%20190903%%\newcommand{\opT}  [0]{\opX [T]    } % transmit
+%20190903% \newcommand{\opTb} [1]{\opXb{T}{#1}}
+%20190903%% \newcommand{\opTa} [0]{\opXa[T]    } % adjoint
+%20190903%% \newcommand{\opC}  [0]{\opX [C]    } % channel
+%20190903% \newcommand{\opCb} [1]{\opXb{C}{#1}}
+%20190903% \newcommand{\opCan}[0]{\opX [C]_{\mathrm{an}}} % additive noise channel
+%20190903% \newcommand{\opCagn}[0]{\opX [C]_{\mathrm{agn}}} % additive noise channel
+%20190903% \newcommand{\opCawn}[0]{\opX [C]_{\mathrm{awn}}} % additive white noise channel
+%20190903% \newcommand{\opCawgn}[0]{\opX [C]_{\mathrm{awgn}}} % additive white Gaussian noise channel
+%20190903% \newcommand{\opCi} [0]{\opX [C]^{-1} } % inverse channel operator
+%20190903% \newcommand{\opCTi} [0]{(\opC\opT)^{-1} } % inverse operator
+%20190903%% \newcommand{\opR}  [0]{\opX [R]    } % receive
+%20190903% \newcommand{\opRb} [1]{\opXb{R}{#1}}
 
 %--------------------------------------
 % Information Theory
 %--------------------------------------
-\newcommand{\iH}[0] {\ensuremath{\mathrm{H}}} % entropy
-\newcommand{\iD}[2] {\ensuremath{\mathrm{D}\left(\left.#1\right\|#2\right)}} % relative entropy
-\newcommand{\iI}[0] {\ensuremath{\mathrm{I}}} % mutual information
-\newcommand{\iC}[0] {\ensuremath{\mathrm{C}}} % channel capacity
-\newcommand{\iE}[0] {\ensuremath{\mathrm{E}}} % 
-        
+%20190903%\newcommand{\iH}[0] {{\mathrm{H}}} % entropy
+%20190903%\newcommand{\iD}[2] {{\mathrm{D}\left(\left.#1\right\|#2\right)}} % relative entropy
+%20190903%\newcommand{\iI}[0] {{\mathrm{I}}} % mutual information
+%20190903%\newcommand{\iC}[0] {{\mathrm{C}}} % channel capacity
+%20190903%\newcommand{\iE}[0] {{\mathrm{E}}} % 
 
 %--------------------------------------
 % Picture boxes
