more em.tex clean-up

--- a/common/em.tex
+++ b/common/em.tex
@@ -12,19 +12,18 @@
 Physics involves the study of principles which govern the natural world.
 Some of these governing principles can be described using a concept called a ``field".
 Three naturally occuring fields have been identified:
-\begin{liste}
-   \item gravitational field
-   \item electric field
-   \item magnetic field
-\end{liste}
+\\\indentx$\begin{array}{cM}
+     \imarks & gravitational field
+   \\\imarks & electric field
+   \\\imarks & magnetic field
+\end{array}$
 
 Thus far no set of equations has been found
 that show the relationship between all three of these fields.
-However, James Maxwell has successfully constructed a set of four equations which state the
+However, James Maxwell has successfully constructed a set of four equations which demonstrate the
 relationship between the electric and magnetic fields.
 These equations show that electric and magnetic fields are intimately related and thus
-the joint study of these fields is called {\em electromagnetic field} theory.
-
+the joint study of these fields is called \structe{electromagnetic field} theory.
 
 %--------------------------------------
 \section{Identities}
@@ -74,7 +73,7 @@ by using the assignment ``$\equiv$" rather than ``$=$".
 
 %--------------------------------------
 \section{Electromagnetic Field Definitions}
-\index{electromagnectic fields}
+\index{electromagnetic fields}
 %--------------------------------------
 %--------------------------------------
 \subsection{Vector quantities}
@@ -83,21 +82,21 @@ Maxwell's equations describe electromagnetic properties in terms of four
 vector quantities: $\E, \H, \D,$ and $\emB$.
 
 %--------------------------------------
-\begin{definition}[\hid{Electric Field E}]
+\begin{definition}
 \label{def_e}
-\index{electromagnectic fields!electric}
+\index{electromagnetic fields!electric}
 %--------------------------------------
 \defboxt{
   The \fnctd{electric field} $\E$ describes the force per unit charge exerted by the field.
-  \\\indentx$\ds \E \eqd \frac{\mathbf F}{Q} $\\
-  where ${\mathbf F}$ is force exerted on a charge $Q$.
+  \\\indentx$\ds \E \eqd \frac{\mathbf F}{Q} $
+  \qquad where ${\mathbf F}$ is force exerted on a charge $Q$.
   }
 \end{definition}
 
 %--------------------------------------
 \begin{definition}
 \label{def:d}
-\index{electromagnectic fields!electric flux density}
+\index{electromagnetic fields!electric flux density}
 %--------------------------------------
 \defboxt{
   The \fnctd{electric flux density} $\D$ specifies\\the equivalent charge per unit area.
@@ -107,7 +106,7 @@ vector quantities: $\E, \H, \D,$ and $\emB$.
 %--------------------------------------
 \begin{definition}
 \label{def:h}
-\index{electromagnectic fields!magnetic}
+\index{electromagnetic fields!magnetic}
 %--------------------------------------
 \defboxt{
   The \fnctd{magnetic field} $\H$ specifies\\
@@ -118,7 +117,7 @@ vector quantities: $\E, \H, \D,$ and $\emB$.
 %--------------------------------------
 \begin{definition}
 \label{def:b}
-\index{electromagnectic fields!magnetic flux density}
+\index{electromagnetic fields!magnetic flux density}
 %--------------------------------------
 \defboxt{
   The \fnctd{magnetic flux density} $\emB$ specifies\\ 
@@ -131,48 +130,64 @@ vector quantities: $\E, \H, \D,$ and $\emB$.
 %--------------------------------------
 The relationship between the electric flux density $\D$
 and electric field $\E$ is described by the \ope{permittivity operator} $\DE$
-as defined next:\footnote{
-   For an very wide class of media, the relation between $\D$ and $\E$
-   can be described very accurately as $\D = \DE \E$.
-   However in general, $\D$ is a function of both $\E$ and $\H$ such that
-   $\D = f(\E,\H)$.
-   One such class of media is \hie{bianisotropic media}.
-   Reference: \cite[page 5]{kong}
-   }
+as defined \pref{def:de} (next definition).
+
+%--------------------------------------
+\begin{remark}
+\footnote{
+  \citerp{kong}{5}
+  }
+\label{rem:de}
+%--------------------------------------
+For a very wide class of media, the relation between $\D$ and $\E$
+can be described very accurately as $\D = \DE \E$.
+However in general, $\D$ is a function of both $\E$ and $\H$ such that
+$\D = f(\E,\H)$.
+One such class of media is \prope{bianisotropic media}.
+\end{remark}
+
 %--------------------------------------
 \begin{definition}
 \label{def:de}
 \index{permittivity}
 %--------------------------------------
-\defboxt{
+\defbox{\begin{array}{MrclM}
   The \opd{permittivity operator} $\DE$ is defined as
-  \\\indentx$\ds\D = \DE\E$\\
+   &\ds\D &=& \DE\E
+   &
+  \\
   If the operation $\DE$ is \prope{invertible} then
-  \\\indentx$\ds\E = \DE^{-1} \D$\\
-  where $\DE^{-1}$ is the inverse operation of $\DE$
-  }
+   & \E &=& \DE^{-1} \D
+   & where $\DE^{-1}$ is the inverse operation of $\DE$
+\end{array}}
 \end{definition}
 
 The relationship between the magnetic flux density $\emB$
 and magnetic field $\H$ is described by the \ope{permeability operator} $\emBH$
-as defined next:\footnote{
-   Again, for an very wide class of media, the relation between $\emB$ and $\H$
+as defined in \pref{def:bh} (next definition).
+
+%--------------------------------------
+\begin{remark}
+%--------------------------------------
+   Similar to \pref{rem:de}, for an very wide class of media, the relation between $\emB$ and $\H$
    can be described very accurately as $\emB = \emBH \H$.
    However in general, $\emB$ is a function of both $\H$ and $\E$ such that
    $\emB = \fg(\H,\E)$ for some function $\fg$.
-   }
+\end{remark}
+
 %--------------------------------------
 \begin{definition}
 \label{def:bh}
 \index{permeability}
 %--------------------------------------
-\defboxt{
+\defbox{\begin{array}{MrclM}
   The \opd{permeability operator} $\emBH$ is defined as
-  \\\indentx$\ds \emB = \emBH\H$\\
+    &\emB &=& \emBH\H
+    \\
   If the operation $\emBH$ is \prope{invertible} then
-  \\\indentx$\ds\H = \emBH^{-1} \emB$\\
-  where $\emBH^{-1}$ is the inverse operation of $\emBH$.
-  }
+    &\H &=& \emBH^{-1} \emB
+    & where $\emBH^{-1}$ is the inverse operation of $\emBH$.
+\end{array}}
 \end{definition}
 
 %--------------------------------------
@@ -210,44 +225,44 @@ we present them here as ``axioms", which of course require no proof.
 
 %--------------------------------------
 \begin{axiom}[\thmd{Maxwell-Faraday Axiom}]
-\label{axiom:mf}
+\label{ax:mf}
 \index{electromagnetic waves!laws!Faraday}
 %--------------------------------------
-\begin{eqnarray*}
-   \curl{\E} &=& -\pderiv{}{t}\emB
-\end{eqnarray*}
+\axbox{
+  \curl{\E} = -\pderiv{}{t}\emB
+  }
 \end{axiom}
 
 %--------------------------------------
 \begin{axiom}[\thmd{Maxwell-Ampere Axiom}]
-\label{axiom:ma}
+\label{ax:ma}
 \index{electromagnetic waves!laws!Ampere}
 %--------------------------------------
-\begin{eqnarray*}
-   \curl{\H} &=& \pderiv{}{t}\D + \J
-   \hspace{1cm}\text{where $\J$ is electric current density}
-\end{eqnarray*}
+\axbox{
+   \curl{\H} = \pderiv{}{t}\D + \J
+   \qquad\text{where $\J$ is electric current density}
+   }
 \end{axiom}
 
 %--------------------------------------
 \begin{axiom}[\thmd{Maxwell-Gauss-D Axiom}]
-\label{axiom:mgd}
+\label{ax:mgd}
 \index{electromagnetic waves!laws!Gauss-D}
 %--------------------------------------
-\begin{eqnarray*}
-   \diver{\D} &=& \rho
-   \hspace{1cm}\text{where $\rho$ is electric charge density}
-\end{eqnarray*}
+\axbox{
+  \diver{\D} = \rho
+  \qquad\text{where $\rho$ is electric charge density}
+  }
 \end{axiom}
 
 %--------------------------------------
 \begin{axiom}[\thmd{Maxwell-Gauss-B Axiom}]
-\label{axiom:mgb}
+\label{ax:mgb}
 \index{electromagnetic waves!laws!Gauss-B}
 %--------------------------------------
-\begin{eqnarray*}
-   \diver{\emB} &=& 0
-\end{eqnarray*}
+\axbox{
+  \diver{\emB} = 0
+  }
 \end{axiom}
 
 %--------------------------------------
@@ -269,25 +284,23 @@ This can be shown using two theorems.
 \begin{theorem}[\thmd{Electric field wave equation}]
 \label{thm:diffwave}
 %--------------------------------------
-Suppose the following conditions are true:
-
-\begin{tabular}{lll}
-   1. & The operations $\DE$ and $\emBH$ are \propb{linear}.      \\
-   2. & The operations $\DE$ and $\emBH$ are \propb{time-invariant}.   \\
-   3. & The operations $\DE$ and $\emBH$ are \propb{invertible}.    & $\DE^{-1}$ and $\emBH^{-1}$ exist \\
-   4. & If $\E=\vect{0}$, then $\D=\vect{0}$.                    & $\D = \DE \vect{0}=\vect{0}$. \\
-   5. & If $\H=\vect{0}$, then $\emB=\vect{0}$.                    & $\emB = \emBH \vect{0}=\vect{0}$ \\
-   6. & The charge density is constant in location.              & $\grad{\rho}=\vect{0}$ \\
-   7. & Current flow is constant in location and time. & $\pderiv{}{t}\J = \vect{0}$ and $\grad\J=\vect{0}$
-\end{tabular}
-
-Then the following equations are also true:
-\thmbox{\begin{array}{rcl}
-   \laplacian{\E} &=& \DE \emBH \pderiv{^2}{t^2}\E  \\
-   \laplacian{H}  &=& \DE\emBH  \pderiv{^2}{t^2}\H
+\thmbox{
+\brb{\begin{array}{FMMD}
+     (1). & $\DE$ and $\emBH$ are \propb{linear}.                                                                  & and
+   \\(2). & $\DE$ and $\emBH$ are \propb{time-invariant}                                                           & and
+   \\(3). & $\DE$ and $\emBH$ are \propb{invertible}       & ($\DE^{-1}$ and $\emBH^{-1}$ exist)                   & and
+   \\(4). & If $\E=\vect{0}$, then $\D=\vect{0}$           & ($\D = \DE \vect{0}=\vect{0}$)                        & and
+   \\(5). & If $\H=\vect{0}$, then $\emB=\vect{0}$         & ($\emB = \emBH \vect{0}=\vect{0}$)                    & and
+   \\(6). & The charge density is constant in location     & ($\grad{\rho}=\vect{0}$)                              & and
+   \\(7). & Current flow is constant in location and time  & ($\pderiv{}{t}\J = \vect{0}$ and $\grad\J=\vect{0}$)  &
 \end{array}}
+\implies
+\brb{\begin{array}{rclD}
+   \laplacian{\E} &=& \DE \emBH \pderiv{^2}{t^2}\E & and\\
+   \laplacian{H}  &=& \DE\emBH  \pderiv{^2}{t^2}\H &
+\end{array}}
+}
 \end{theorem}
-
 \begin{proof}
 %By Lemma ---, % \ref{lem_linear},
 The condition that $\DE$ is linear and invertible implies $\DE^{-1}$ is also linear.
@@ -303,7 +316,7 @@ We now analyze the curl of the left hand side of the Maxwell-Faraday Axiom.
    \\&= \DE^{-1}\grad{(\diver{\D})} - \laplacian{\E}
      && \text{because $\DE^{-1}$ is linear}
    \\&= \DE^{-1}\grad{\rho} - \laplacian{\E}
-     && \text{by \prefp{axiom:mgd}}
+     && \text{by \prefp{ax:mgd}}
    \\&= \DE^{-1}0 - \laplacian{\E}
      && \text{by condition 6}
    \\&= \DE^{-1}\DE 0 - \laplacian{\E}
@@ -353,37 +366,37 @@ the first equation of the theorem.
 
 
 
-By Lemma ---, %\ref{lem_linear},
-the condition that $\emBH$ is linear and invertible implies $\emBH^{-1}$ is also linear.
+%By Lemma ---, %\ref{lem_linear},
+The condition that $\emBH$ is linear and invertible implies $\emBH^{-1}$ is also linear.
 
 We now analyze the curl of the left hand side of the Maxwell-Ampere Axiom.
 \begin{align*}
    \curl{\curl{H}}
    &\equiv& \grad{(\diver{H})} - \laplacian{H}
-   & \text{by \prefp{thm:laplace}}
+   && \text{by \prefp{thm:laplace}}
    \\ &=&
    \grad{(\diver{\emBH^{-1}\emB})} - \laplacian{H}
-   & \text{because $\emBH$ is invertible}
+   && \text{because $\emBH$ is invertible}
    \\ &=&
    \grad{\emBH^{-1}(\diver{\emB})} - \laplacian{H}
-   & \text{because $\emBH^{-1}$ is linear}
+   && \text{because $\emBH^{-1}$ is linear}
    \\ &=&
    \emBH^{-1}\grad{(\diver{\emB})} - \laplacian{H}
-   & \text{because $\emBH^{-1}$ is \prope{linear}}
+   && \text{because $\emBH^{-1}$ is \prope{linear}}
    \\ &=&
    \emBH^{-1}0 - \laplacian{H}
-   & \text{by \prefp{axiom:mgb}}
+   && \text{by \prefp{ax:mgb}}
    \\ &=&
    \emBH^{-1}\emBH 0 - \laplacian{H}
-   & \text{by condition 5}
+   && \text{by condition 5}
    \\ &=&
    0 - \laplacian{H}
-   & \text{because $\emBH^{-1}\emBH=I$ is the identity operator}
+   && \text{because $\emBH^{-1}\emBH=I$ is the identity operator}
    \\ &=&
    - \laplacian{H}
 \end{align*}
 
-We now analyze the curl of the right side of the \thme{Maxwell-Faraday Axiom} \xref{axiom:mf}.
+We now analyze the curl of the right side of the \thme{Maxwell-Faraday Axiom} \xref{ax:mf}.
 
 \begin{align*}
    \curl{\left( \pderiv{}{t}\D + \J \right)}
@@ -410,14 +423,14 @@ the second part of the theorem.
 \end{align*}
 \end{proof}
 
-\prefpp{thm:diffwave} shows that under Axioms \pref{axiom:mf} -- \prefpp{axiom:mgb} and
+\prefpp{thm:diffwave} shows that under Axioms \pref{ax:mf} -- \prefpp{ax:mgb} and
 certain other general conditions, both the electric field and magnetic field can be
 represented as second order differential equations in location and time.
 The general solution to these equations is given in the next theorem.
 
 %--------------------------------------
 \begin{theorem}
-\label{thm_swave}
+\label{thm:swave}
 \footnote{
   \citerp{inan}{21}
   }
@@ -565,22 +578,18 @@ This could involve several reflections over time or an array of transmitting and
 %--------------------------------------
 Refraction is very useful for determining the internal composition of an object.
 The electric field wave equation tells us that
-\begin{eqnarray*}
-   \laplacian{\E} &=& \DE \emBH \pderiv{^2}{t^2}\E
-\end{eqnarray*}
-where $\DE$ is the permittivity operator and $\emBH$ the permeability operator.
+\\\indentx$\laplacian{\E} = \DE \emBH \pderiv{^2}{t^2}\E$\\
+where $\DE$ is the \ope{permittivity operator} and $\emBH$ the \ope{permeability operator}.
 Using numerical techniques, it may be possible to ``solve" (find the mapping for)
 the operation $\DE \emBH$.
-In general the operation is non-linear.
-However in many cases it may be linear or approximately linear in which case
-$\DE \emBH$ may be modelled as a matrix.
-One technique for analyzing the matrix could be to perform a {\em singular value decomposition} (SVD)
+In general the operation is \prope{non-linear}.
+However in many cases it may be \prope{linear} or approximately linear in which case
+$\DE \emBH$ may be modeled as a matrix.
+One technique for analyzing the matrix is to perform a \ope{singular value decomposition} (SVD)
 and then analyze the pseudo eigenvalues and eigenvectors of the decomposition to
 gain a clearer understanding of the properties of the object.  The SVD of $\DE\emBH$ can
 be expresed as
-\begin{eqnarray*}
-   \DE\emBH &=& \vect{U} \Lambda \vect{V}
-\end{eqnarray*}
+\\\indentx$\ds\DE\emBH = \vect{U} \Lambda \vect{V}$\\
 where $\Lambda$ is a diagonal matrix containing the pseudo-eigenvalues of $\DE\emBH$
 and $\vect{U}$ and $\vect{V}$ are matrices containing
 the pseudo-eigenvectors.
